# comparativeMotionAnalysis

./: README.md  pyproject.toml
data/aligned/: BicepC.Subject1.Cam1.R1Fast.csv  BicepC.Subject1.Cam1.R1Slow.csv  BicepC.Subject1.Cam1.R2Fast.csv  BicepC.Subject1.Cam1.R2Slow.csv  BicepC.Subject1.Cam1.R3Fast.csv  BicepC.Subject1.Cam1.R3Slow.csv  BicepC.Subject2.Cam1.R1Fast.csv  BicepC.Subject2.Cam1.R1Slow.csv  BicepC.Subject2.Cam1.R2Fast.csv  BicepC.Subject2.Cam1.R2Slow.csv  BicepC.Subject2.Cam1.R3Fast.csv  BicepC.Subject2.Cam1.R3Slow.csv  BicepC.Subject3.Cam1.R1Fast.csv  BicepC.Subject3.Cam1.R1Slow.csv  BicepC.Subject3.Cam1.R2Fast.csv  BicepC.Subject3.Cam1.R2Slow.csv  BicepC.Subject3.Cam1.R3Fast.csv  BicepC.Subject3.Cam1.R3Slow.csv  BodyLean.Subject1.Cam1.R1Fast.csv  BodyLean.Subject1.Cam1.R1Slow.csv  BodyLean.Subject1.Cam1.R2Fast.csv  BodyLean.Subject1.Cam1.R2Slow.csv  BodyLean.Subject1.Cam1.R3Fast.csv  BodyLean.Subject1.Cam1.R3Slow.csv  BodyLean.Subject2.Cam1.R1Fast.csv  BodyLean.Subject2.Cam1.R1Slow.csv  BodyLean.Subject2.Cam1.R2Fast.csv  BodyLean.Subject2.Cam1.R2Slow.csv  BodyLean.Subject2.Cam1.R3Fast.csv  BodyLean.Subject2.Cam1.R3Slow.csv  BodyLean.Subject3.Cam1.R1Fast.csv  BodyLean.Subject3.Cam1.R1Slow.csv  BodyLean.Subject3.Cam1.R2Fast.csv  BodyLean.Subject3.Cam1.R2Slow.csv  BodyLean.Subject3.Cam1.R3Fast.csv  BodyLean.Subject3.Cam1.R3Slow.csv  ChestAA.Subject1.Cam1.R1Fast.csv  (+53 more)
src/: compute_angles.py  compute_roughness.py  compute_velocity.py  fig4_Pearson.py  fig5_BlandAltman.py  fig6_FaceDetection.py  table4_rangeOfMotion.py  table5_roughness.py
(+199 files in other folders)
