[tool.poetry]
name = "comparativeMotionAnalysis"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pandas = "^2.2.2"
icecream = "^2.1.3"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
mediapipe = "^0.10.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
